[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.3"
adler = "1.0.2"
glob = "0.3.0"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
crossbeam-utils = "0.8.11"
crossbeam-channel = "0.5.6"
crossbeam = "0.8.2"