[package]
name = "xsync"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Valentine-Mario/xsync"
categories = ["upload-files", "development-tools", "upload-folder", "synchronization-tools"]
description = "Sync tool for dir and files inspired by rsync"
keywords = ["sync", "ssh", "upload"]
homepage= "https://github.com/Valentine-Mario/xsync"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.3"
adler = "1.0.2"
glob = "0.3.0"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }